# rust_utilities

./: .gitignore
clean_csv/: Cargo.toml
clean_csv/src/: main.rs
clearsigntoml_tools/: Cargo.toml  here.txt
clearsigntoml_tools/src/: clearsign_toml_module.rs  main.rs
external_user_input_buffer/: Cargo.toml
external_user_input_buffer/src/: external_user_input_buffer.rs  main.rs
externalized_input_buffer/: Cargo.toml
externalized_input_buffer/src/: main.rs
get_crate_version/: Cargo.toml
get_crate_version/src/: main.rs
get_gpg_key_from_id/: Cargo.toml
gpg_tools/: Cargo.toml
gpg_tools/src/: main.rs
handle_gpg/: Cargo.toml
handle_gpg/src/: handle_gpg.rs  main.rs  test.toml
levenshtein_dist_rust/: Cargo.toml
levenshtein_dist_rust/src/: main.rs
levenshtein_distance_rust/: Cargo.toml
manage_absolute_executable_directory_relative_paths/: Cargo.toml
manage_absolute_executable_directory_relative_paths/src/: main.rs  manage_absolute_executable_directory_relative_paths (Copy).rs  manage_absolute_executable_directory_relative_paths.rs
mixed_type_input_checking/: Cargo.toml
mixed_type_input_checking/src/: main (Copy 2).rs  main (Copy 3).rs  main (Copy 4).rs  main (Copy).rs  main.rs
noheap_read_toml_field/: test.toml
noheap_read_toml_field/src/: main.rs  read_toml_single_line_string_field_no_heap.rs
read_toml_field/: Cargo.toml  config.toml  test.toml
read_toml_field/src/: main.rs  read_toml_field.rs
three_part_tui/: Cargo.toml
three_part_tui/src/: externalized_input_buffer.rs  main.rs
update_toml_field/: Cargo.toml  config.toml
(+8 files in other folders)
